2000-09-25  Lars Wirzenius  <liw@iki.fi>

	* checks/check_http.sh: Check for "ERROR:" in log file.
	
	* gw/html.h: Include gwlib/gwlib.h, not octstr.h.
	
	* test/test_http.c: Add -q option.
	
	* gwlib/http.c: Bugfix. Format string said %s when it should
	have said %S.

2000-09-25  Kalle Marjola  <rpr@wapit.com>

	* gw/smsbox*.*: activated sendsms-user allow/deny-ip strings

	* gw/urltrans.c|h: appropriate modifications to that file
	
	* doc/userguide/userguide.xml: started to write a new chapter
	about SMS Kannel setup

2000-09-25  Kalle Marjola  <rpr@wapit.com>

	* gw/bb_udp.c, gwlib/socket.c|h, test/test_udp.c: inserted
	interface-name patch by Andreas Fink. 

2000-09-25  Lars Wirzenius  <liw@iki.fi>

	* doc/userguide/newconf.txt: Added slightly better descriptions
	from Paul Keogh for SMS2000 config variables.

2000-09-25  Kalle Marjola  <rpr@wapit.com>

	* doc/userguide/userguide.xml, doc/userguide/newconf.txt: updated
	to include notes about SMSC ID use.

	* gw/bb_smsc.c, gw/smsc.c|h, gw/smsc_p.h: added preferred-id and
	denied-id configuration variable for SMS routing
	
2000-09-25  Kalle Marjola  <rpr@wapit.com>

	* gwlib/utils.c: added str_find_substr

	* gw/urltrans.c|h: added 'smsc' to find_translations, and
	forced-smsc, default-smsc and accepted-smsc for translation
	groups. Accepted-smsc is now in full use, so if you need
	sms-services linked to used SMSC, use it (and smsc-id for
	corresponding SMSC)

	* gw/smsbox_req.c: set smsc_id for send-sms requests

	* doc/userguide/newconf.txt: added new attributes here

2000-09-25  Kalle Marjola  <rpr@wapit.com>

	* gwlib/utils.c (get_and_set_debugs): fixed '--' parsing

2000-09-22  Kalle Marjola  <rpr@wapit.com>

	* gwlib/utils.c: set that command line option '--' ends option
	parsing. Thanks to Kari Lempiainen for finding this, although I
	added one 'break' to it, too.
	
2000-09-22  Richard Braakman  <dark@wapit.com>

	* gw/timers.c: Correctly record elapse-event in gwtimer_start.  Oops.