@@ -1,3 +1,8 @@
+2000-09-25  Richard Braakman  <dark@wapit.com>
+
+	* gwlib/conn.c: Make conn_read_line() work more than once.
+	Thanks to mulix@actcom.co.il for reporting this.
+
 2000-09-25  Lars Wirzenius  <liw@iki.fi>
 
 	* checks/check_http.sh: Check for "ERROR:" in log file.
